@@ -49,6 +49,7 @@
    USE struct_fact_data_module,    ONLY : struct_fact_data_init
    USE uspp,                       ONLY : nkb, vkb
    USE becmod,                     ONLY : becp
+   USE mp,                         ONLY : mp_barrier
    !
    IMPLICIT NONE
       !
@@ -567,16 +568,23 @@
           !
       ENDIF
 
-!
-! ... Finally write projections and overlaps on file (if the case)
-!
+      !
+      ! to avoid any interference between read and write
+      !
+      CALL mp_barrier()
+
+      !
+      ! write projections and overlaps on file (if the case)
+      !
       IF ( .NOT. (read_overlaps .AND. read_projections)  ) THEN
 
           IF ( ionode ) THEN
+              !
               CALL io_name('overlap_projection',filename)
               CALL file_open(ovp_unit,TRIM(filename),PATH="/",ACTION="write", &
                                       FORM=TRIM(wantdata_form), IERR=ierr)
               IF ( ierr/=0 ) CALL errore(subname, 'opening '//TRIM(filename), ABS(ierr)) 
+              !
           ENDIF
           !
           CALL overlap_write(ovp_unit,"OVERLAP_PROJECTION")
