@@ -4,6 +4,8 @@
 =======================================================
 
 
+21 Nov 2008      Bug in the disentanglement restart procedure fixed. (AF)
+
 20 Nov 2008      Bug fixed in util.f90. (AF)
 
 19 Nov 2008      Most of the matrices in workspace_wan.f90 are now allocated
